Add TeleportHandler, improve plugin reload